--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "history": "^4.10.1",
     "input-field-validator": "^1.2.3",
+    "js-cookie": "^2.2.1",
     "milsymbol": "^2.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropdown": "^1.7.0",
     "react-redux": "^7.2.1",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.0",
     "react-toastify": "^6.0.8",
     "redux": "^4.0.5",
